force-app/main/default/objects/Contact/fields/Poids__c.field-meta.xml
<CustomField>
    <fullName>Poids__c</fullName>
    <description>Ce Champ représente le poids de la personne</description>
    <label>Poids</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>