force-app/main/default/objects/Contact/listViews/Contacts.listView-meta.xml
<ListView>
    <fullName>Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>Sexe__c</columns>
    <columns>Poids__c</columns>
    <columns>Age__c</columns>
    <filterScope>Mine</filterScope>
    <label>Contacts</label>
</ListView>