force-app/main/default/objects/Contact/listViews/Vuerecemment.listView-meta.xml
<ListView>
    <fullName>Vuerecemment</fullName>
    <columns>FULL_NAME</columns>
    <columns>Sexe__c</columns>
    <columns>Poids__c</columns>
    <columns>Age__c</columns>
    <filterScope>Mine</filterScope>
    <label>Vue récemment</label>
</ListView>